# NRMS-pytorch

./: README.md  args_nrms_docvec.py  ebnerd_nrms_docvec.py  ebnerd_nrms_docvec_testset.py  ebnerd_nrms_docvec_time.py  env.py  nrms_docvec.ipynb  nrms_docvec_time.ipynb  pyproject.toml  test.ipynb
evaluation/: metrics_protocols.py
hpc-results/NRMSDocVec/: NRMSDocVec_argparser.json  NRMSDocVec_hparams.json  gpu_23478176.out  test_metrics.json
hpc-results/NRMSDocVec-time/: NRMSDocVec_argparser.json  gpu_23478175.out  test_metrics.json
hpc-results/killed/: gpu_23454479.err  gpu_23454479.out
models/: dataloader.py  dataloader2.py  layers.py  model_config.py  nrms_docvec.py
utils/: _behaviors.py  _nlp.py  _polars.py
