[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "A sample Python project"
authors = [ "Your Name <your.email@example.com>",]

[tool.poetry.dependencies]
python = "^3.8"
contourpy = "^1.3.0"
cycler = "^0.12.1"
dataclasses = "^0.6"
fastjsonschema = "^2.21.1"
fonttools = "^4.55.2"
fsspec = "^2024.10.0"
h5py = "^3.12.1"
huggingface-hub = "^0.26.3"
importlib_resources = "^6.4.5"
intel-openmp = "^2021.4.0"
joblib = "^1.4.2"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2024.10.1"
jupytext = "^1.16.4"
keras = "^3.7.0"
kiwisolver = "^1.4.7"
libclang = "^18.1.1"
markdown-it-py = "^3.0.0"
matplotlib = "^3.9.3"
mdit-py-plugins = "^0.4.2"
mdurl = "^0.1.2"
mkl = "^2021.4.0"
ml-dtypes = "^0.4.1"
namex = "^0.0.8"
nbformat = "^5.10.4"
optree = "^0.13.1"
polars = "^1.16.0"
protobuf = "^5.29.0"
pyparsing = "^3.2.0"
pywin32 = "^307"
referencing = "^0.35.1"
regex = "^2024.11.6"
rich = "^13.9.4"
rpds-py = "^0.22.3"
safetensors = "^0.4.5"
scikit-learn = "^1.5.2"
sympy = "^1.13.1"
tbb = "^2021.11.0"
tensorboard = "^2.18.0"
tensorboard-data-server = "^0.7.2"
threadpoolctl = "^3.5.0"
tokenizers = "^0.20.3"
toml = "^0.10.2"
tomli = "^2.2.1"
torch = "^2.3.1+cu118"
torchaudio = "^2.3.1"
torchvision = "^0.18.1"
tqdm = "^4.67.1"
transformers = "^4.46.3"
zstandard = "^0.23.0"
